# raspi-zero2-sensors

./: Cargo.toml  README.md
examples/: bluetooth_remote_control.rs  bluetooth_volume_notification.rs  environment_sound_analytis.rs  environment_sound_monitor.rs  led_strobe.rs  led_visuaal_alarm.rs  real_time_sound_streaming.rs  sound_led_patternn.rs  sound_reactive_led.rs
