[package]
name = "raspberry_pi_projects"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.13"     # Raspberry Pi GPIO library
paho-mqtt = "0.10" # MQTT library (if needed for Bluetooth communication)
serde = "1.0"      # For data serialization
serde_json = "1.0" # For JSON handling (if needed)
